tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0101/input.js
(eval) => { "use strict"; 42 }
